test success on styles

--- a/GCModeller/Resources/index.html
+++ b/GCModeller/Resources/index.html
@@ -27,7 +27,7 @@
     <link rel="shortcut icon" href="~/DNA.png">
     <link rel="stylesheet" href="~/assets/normalize.css">
     <link rel="stylesheet" href="~/assets/foundation.css">
-    <link rel="stylesheet" href="~/assets/font-awesome.css">
+    <link rel="stylesheet" href="http://gcmodeller.org/assets/font-awesome.css">
     <link rel="stylesheet" href="~/assets/github.css">
     <link rel="stylesheet" href="~/assets/magnific-popup.css">
     <link rel="stylesheet" href="~/assets/css.css">
