tweaks on the page

--- a/GCModeller/Resources/index.html
+++ b/GCModeller/Resources/index.html
@@ -24,7 +24,7 @@
     <meta class="foundation-mq-small">
     <meta class="foundation-mq-topbar">
 
-    <link rel="shortcut icon" href="~/DNA.png">
+    <link rel="shortcut icon" href="http://gcmodeller.org/DNA.png">
     <link rel="stylesheet" href="~/assets/normalize.css">
     <link rel="stylesheet" href="~/assets/foundation.css">
     <link rel="stylesheet" href="http://gcmodeller.org/assets/font-awesome.css">
@@ -46,7 +46,7 @@
         <nav class="top-bar" data-topbar="">
           <ul class="title-area">
             <li class="name">
-              <h1><a href="~/index.html"><img alt="GCModeller Logo" src="~/DNA.png" id="header-logo">GCModeller</a></h1>
+              <h1><a href="~/index.html"><img alt="GCModeller Logo" src="http://gcmodeller.org/DNA.png" id="header-logo">GCModeller</a></h1>
             </li>
             <li class="toggle-topbar"><a href="#">Menu</a></li>
           </ul>
