not sure how to makes the browser think the fasta file is not a text document

--- a/wwwroot/seqtools/DNA_sites.done.html
+++ b/wwwroot/seqtools/DNA_sites.done.html
@@ -11,4 +11,4 @@ Then this tools will parsing the DNA sites sequence for you by using your gff si
 <br />
 
 <h5>Task Complete!</h5>
-<p>Your fasta file is ready at: <a href="../data-store/@">{Name}</a></p>
+<p>Your fasta file is ready at: <a href="../data-store/@" target="_blank">{Name}</a></p>
