--- a/wwwroot/D3.js/kegg-net/KEGG.d3js.html
+++ b/wwwroot/D3.js/kegg-net/KEGG.d3js.html
@@ -1,1 +1,10 @@
 <!-- 基于D3.js的KEGG数据库可视化查询工具 -->
+<html>
+<head>
+	<title>D3.js KEGG database visualization</title>
+</head>
+<body>
+	<div id="canvas">
+	</div>
+</body>
+</html>
