--- a/wwwroot/D3.js/kegg-net/KEGG.d3js.html
+++ b/wwwroot/D3.js/kegg-net/KEGG.d3js.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>D3.js KEGG database visualization</title>
+	<script src="//d3js.org/d3.v3.min.js"></script>
 </head>
 <body>
-	<div id="canvas">
-	</div>
+	<div id="canvas"></div>
 </body>
 </html>
