--- a/wwwroot/D3.js/kegg-net/KEGG.d3js.html
+++ b/wwwroot/D3.js/kegg-net/KEGG.d3js.html
@@ -1,8 +1,9 @@
-<!-- 基于D3.js的KEGG数据库可视化查询工具 -->
+﻿<!-- 基于D3.js的KEGG数据库可视化查询工具 -->
 <html>
 <head>
 	<title>D3.js KEGG database visualization</title>
 	<script src="//d3js.org/d3.v3.min.js"></script>
+	<script src="./App.js"></script>
 </head>
 <body>
 	<div id="canvas"></div>
