--- a/wwwroot/D3.js/kegg-net/KEGG.d3js.html
+++ b/wwwroot/D3.js/kegg-net/KEGG.d3js.html
@@ -23,8 +23,9 @@
 function d3Network(jsonFile, width, height) {
 	    
     var force = d3.layout.force()
-        .charge(-100)
-        .linkDistance(15)
+         .linkDistance(375)
+        .charge(-200)
+        .gravity(0.75)
         .size([width, height]);
 
     var svg = d3.select("body").append("svg")
@@ -51,7 +52,7 @@ function d3Network(jsonFile, width, height) {
             .enter().append("line")
             .attr("class", "link")
             .style("stroke-width", function(l) {
-				return 1;
+				return 2;
 			});
 
 		// 配置网络之中的节点
@@ -78,8 +79,12 @@ var texts = svg.selectAll("text.label")
                 .data(graph.nodes)
                 .enter().append("text")
                 .attr("class", "label")
+				.attr("font-family", "Microsoft YaHei")
                 .attr("fill", function(d) {
 					return color(d.group);
+				})
+				.attr("font-size", function(d) {
+					return d.size + "px";
 				})
                 .text(function(d) {  return d.name;  });
 			        
