--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -77,55 +77,61 @@ table caption {font-size:14px;font-weight:bolder;}
         <caption>.NET clr type export</caption>
         <tbody><tr>
   <td id="reaction_node">
-    <a href="/vignettes/clr/biocad_registry/biocad_registry/reaction_node.html">reaction_node: reaction_node</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/reaction_node.html">reaction_node: reaction_node</a>
   </td>
   <td></td>
 </tr>
 <tr>
   <td id="reaction_graph">
-    <a href="/vignettes/clr/biocad_registry/biocad_registry/reaction_graph.html">reaction_graph: reaction_graph</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/reaction_graph.html">reaction_graph: reaction_graph</a>
   </td>
   <td></td>
 </tr>
 <tr>
   <td id="molecules">
-    <a href="/vignettes/clr/biocad_registry/biocad_registry/molecules.html">molecules: molecules</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/molecules.html">molecules: molecules</a>
   </td>
   <td></td>
 </tr>
 <tr>
   <td id="dblinks">
-    <a href="/vignettes/clr/biocad_registry/biocad_registry/dblinks.html">dblinks: dblinks</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/dblinks.html">dblinks: dblinks</a>
   </td>
   <td></td>
 </tr>
 <tr>
   <td id="subcellular_compartments">
-    <a href="/vignettes/clr/biocad_registry/biocad_registry/subcellular_compartments.html">subcellular_compartments: subcellular_compartments</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/subcellular_compartments.html">subcellular_compartments: subcellular_compartments</a>
   </td>
   <td></td>
 </tr>
 <tr>
   <td id="subcellular_locations">
-    <a href="/vignettes/clr/biocad_registry/biocad_registry/subcellular_locations.html">subcellular_locations: subcellular_locations</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/subcellular_locations.html">subcellular_locations: subcellular_locations</a>
   </td>
   <td></td>
 </tr>
 <tr>
   <td id="vocabulary">
-    <a href="/vignettes/clr/biocad_registry/biocad_registry/vocabulary.html">vocabulary: vocabulary</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/vocabulary.html">vocabulary: vocabulary</a>
   </td>
   <td></td>
 </tr>
 <tr>
   <td id="pathway">
-    <a href="/vignettes/clr/biocad_registry/biocad_registry/pathway.html">pathway: pathway</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/pathway.html">pathway: pathway</a>
   </td>
   <td></td>
 </tr>
 <tr>
   <td id="complex">
-    <a href="/vignettes/clr/biocad_registry/biocad_registry/complex.html">complex: complex</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/complex.html">complex: complex</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
+  <td id="biocad_registry">
+    <a href="/vignettes/clr/biocad_registry/biocad_registry.html">biocad_registry: biocad_registry</a>
   </td>
   <td></td>
 </tr></tbody>
