--- a/vignettes/clr/biocad_registry/biocad_registryModel/vocabulary.html
+++ b/vignettes/clr/biocad_registry/biocad_registryModel/vocabulary.html
@@ -31,10 +31,10 @@
 # namespace biocad_registry.biocad_registryModel
 export class vocabulary extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> {
    add_time: <a href="/vignettes/clr/System/DateTime.html">DateTime</a>;
-   description: string;
-   hashcode: string;
+   category: string;
+   color: string;
    id: integer;
-   parent_id: integer;
+   note: string;
    term: string;
 }
 </code>
@@ -59,4 +59,4 @@ export class vocabulary extends <a href="/vignettes/clr/Oracle/LinuxCompatibilit
 <script type="text/javascript" src="../../_assets/highlights.js"></script>
 <script type="text/javascript">r_highlights("clr_ts");</script>
 
-</html>
+</html>
