--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -77,7 +77,7 @@ table caption {font-size:14px;font-weight:bolder;}
         <caption>.NET clr type export</caption>
         <tbody><tr>
   <td id="reaction_node">
-    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/reaction_node.html">reaction_node: reaction_node</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/reaction.html">reaction_node: reaction</a>
   </td>
   <td></td>
 </tr>
@@ -89,13 +89,13 @@ table caption {font-size:14px;font-weight:bolder;}
 </tr>
 <tr>
   <td id="molecules">
-    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/molecules.html">molecules: molecules</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/molecule.html">molecules: molecule</a>
   </td>
   <td></td>
 </tr>
 <tr>
   <td id="dblinks">
-    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/dblinks.html">dblinks: dblinks</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/db_xrefs.html">dblinks: db_xrefs</a>
   </td>
   <td></td>
 </tr>
@@ -107,7 +107,7 @@ table caption {font-size:14px;font-weight:bolder;}
 </tr>
 <tr>
   <td id="subcellular_locations">
-    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/subcellular_locations.html">subcellular_locations: subcellular_locations</a>
+    <a href="/vignettes/clr/biocad_registry/biocad_registryModel/subcellular_location.html">subcellular_locations: subcellular_location</a>
   </td>
   <td></td>
 </tr>
@@ -146,4 +146,4 @@ table caption {font-size:14px;font-weight:bolder;}
     <hr />
     <div style="text-align: center;">[<a href="../index.html">Document Index</a>]</div>
   </body>
-</html>
+</html>
