--- a/vignettes/clr/Microsoft/VisualBasic/ComponentModel/DataSourceModel/SchemaMaps/SQLTable.html
+++ b/vignettes/clr/Microsoft/VisualBasic/ComponentModel/DataSourceModel/SchemaMaps/SQLTable.html
@@ -22,9 +22,8 @@
 
         <h3>Description</h3>
 
-        A generic abstract model of a SQL table.
- (SQL之中的一个数据表的抽象描述接口)
-
+        <p>A generic abstract model of a SQL table.
+ (SQL之中的一个数据表的抽象描述接口)</p>
 
         <h3>Declare</h3>        
 
@@ -52,4 +51,4 @@ export class SQLTable {
 <script type="text/javascript" src="../../_assets/highlights.js"></script>
 <script type="text/javascript">r_highlights("clr_ts");</script>
 
-</html>
+</html>
