--- a/vignettes/clr/biocad_registry/biocad_registryModel/complex.html
+++ b/vignettes/clr/biocad_registry/biocad_registryModel/complex.html
@@ -30,11 +30,11 @@
             <code id="clr_ts">
 # namespace biocad_registry.biocad_registryModel
 export class complex extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> {
+   add_time: <a href="/vignettes/clr/System/DateTime.html">DateTime</a>;
    component_id: integer;
    id: integer;
    molecule_id: integer;
-   n_components: integer;
-   name: string;
+   note: string;
 }
 </code>
         </pre>
@@ -43,6 +43,7 @@ export class complex extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/M
 
         <ol>
 <li>this class extends from <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> class: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a></li>
+<li>use by <i>property</i> member <code>add_time</code>: <a href="/vignettes/clr/System/DateTime.html">DateTime</a></li>
 </ol>
 
 
@@ -57,4 +58,4 @@ export class complex extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/M
 <script type="text/javascript" src="../../_assets/highlights.js"></script>
 <script type="text/javascript">r_highlights("clr_ts");</script>
 
-</html>
+</html>
