--- a/vignettes/clr/biocad_registry/biocad_registryModel/reaction.html
+++ b/vignettes/clr/biocad_registry/biocad_registryModel/reaction.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>biocad_registry.biocad_registryModel.subcellular_compartments</title>
+    <title>biocad_registry.biocad_registryModel.reaction</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -13,12 +13,12 @@
 
         <table style="width: 100%;">
             <tr>
-                <td>subcellular_compartments {biocad_registry.biocad_registryModel}</td>
+                <td>reaction {biocad_registry.biocad_registryModel}</td>
                 <td style="text-align: right;">.NET clr documentation</td>
             </tr>
         </table>
 
-        <h2>subcellular_compartments</h2>
+        <h2>reaction</h2>
 
         <h3>Description</h3>
 
@@ -29,10 +29,11 @@
         <pre>
             <code id="clr_ts">
 # namespace biocad_registry.biocad_registryModel
-export class subcellular_compartments extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> {
+export class reaction extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> {
    add_time: <a href="/vignettes/clr/System/DateTime.html">DateTime</a>;
-   compartment_name: string;
+   equation: string;
    id: integer;
+   name: string;
    note: string;
 }
 </code>
