--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -11,6 +11,7 @@ LazyData: true
 RoxygenNote: 7.1.1
 </pre>
 <br />
+<a href="./keywords.html">View package by keywords.</a>
 <h2>R Package Symbols</h2>
 <ul>
 <li><a href="./R/docs/get_motif_sites.html">get_motif_sites</a></li>
