run package msbuild

--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -140,7 +140,12 @@ table caption {font-size:14px;font-weight:bolder;}
       <br />
       <table class="table-three-line">
         <caption>.NET clr function exports</caption>
-        <tbody></tbody>
+        <tbody><tr>
+  <td id="vocabulary_id">
+    <a href="./models/vocabulary_id.html">vocabulary_id</a>
+  </td>
+  <td></td>
+</tr></tbody>
       </table>
     </div>
     <hr />
