run package msbuild

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -14,18 +14,7 @@ RoxygenNote: 7.1.1
 <a href="./keywords.html">View package by keywords.</a>
 <h2>R Package Symbols</h2>
 <ul>
-<li><a href="./R/docs/get_motif_sites.html">get_motif_sites</a></li>
-<li><a href="./R/docs/get_dblinks.html">get_dblinks</a></li>
-<li><a href="./R/docs/put.go_term.html">put.go_term</a></li>
-<li><a href="./R/docs/put.ncbi_tax.html">put.ncbi_tax</a></li>
-<li><a href="./R/docs/pull_taxonomic.html">pull_taxonomic</a></li>
-<li><a href="./R/docs/pull_motif_family.html">pull_motif_family</a></li>
-<li><a href="./R/docs/put.taxonomic_group.html">put.taxonomic_group</a></li>
-<li><a href="./R/docs/put.genome_group.html">put.genome_group</a></li>
-<li><a href="./R/docs/put.operon.html">put.operon</a></li>
-<li><a href="./R/docs/put.regulation.html">put.regulation</a></li>
-<li><a href="./R/docs/put.sequence.html">put.sequence</a></li>
-<li><a href="./R/docs/wrap_list.html">wrap_list</a></li>
+<li><a href="./R/docs/open_registry.html">open_registry</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
 </ul>
 <h2>Library: biocad_registry.dll</h2>
