--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -134,6 +134,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="/vignettes/clr/biocad_registry/biocad_registry.html">biocad_registry: biocad_registry</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="cad_registry">
+    <a href="/vignettes/clr/biocad_registry/biocad_registry.html">cad_registry: biocad_registry</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
       <br />
