make updates ofthe database model

--- a/vignettes/clr/biocad_registry/biocad_registryModel/subcellular_compartments.html
+++ b/vignettes/clr/biocad_registry/biocad_registryModel/subcellular_compartments.html
@@ -34,6 +34,7 @@ export class subcellular_compartments extends <a href="/vignettes/clr/Oracle/Lin
    compartment_name: string;
    id: integer;
    note: string;
+   topology: string;
 }
 </code>
         </pre>
