export location api

--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -151,6 +151,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./models/vocabulary_id.html">vocabulary_id</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="subcellular_location">
+    <a href="./models/subcellular_location.html">subcellular_location</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
