imports sequecne data

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -14,7 +14,12 @@ RoxygenNote: 7.1.1
 <a href="./keywords.html">View package by keywords.</a>
 <h2>R Package Symbols</h2>
 <ul>
+<li><a href="./R/docs/gene_term.html">gene_term</a></li>
+<li><a href="./R/docs/rna_term.html">rna_term</a></li>
+<li><a href="./R/docs/protein_term.html">protein_term</a></li>
+<li><a href="./R/docs/metabolite_term.html">metabolite_term</a></li>
 <li><a href="./R/docs/open_registry.html">open_registry</a></li>
+<li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
 </ul>
 <h2>Library: biocad_registry.dll</h2>
