make package msbuild

--- a/vignettes/clr/biocad_registry/biocad_registryModel/subcellular_location.html
+++ b/vignettes/clr/biocad_registry/biocad_registryModel/subcellular_location.html
@@ -32,6 +32,7 @@
 export class subcellular_location extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> {
    add_time: <a href="/vignettes/clr/System/DateTime.html">DateTime</a>;
    compartment_id: integer;
+   entity: integer;
    id: integer;
    note: string;
    obj_id: integer;
