--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -1,10 +1,10 @@
 ﻿<pre>Package: biocad_registry
 Type: Package
-Title: Access the GCModeller cloud repository
+Title: Database system for access the GCModeller cloud repository
 Version: 1.0.148
 Author: xieguigang &lt;xie.guigang@gcmodeller.org>
 Maintainer: xieguigang &lt;xie.guigang@gcmodeller.org>
-Description: Rscript client to the web api for access the GCModeller cloud repository
+Description: Database system for access the GCModeller cloud repository
 License: MIT License
 Encoding: UTF-8
 LazyData: true
@@ -18,6 +18,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/rna_term.html">rna_term</a></li>
 <li><a href="./R/docs/protein_term.html">protein_term</a></li>
 <li><a href="./R/docs/metabolite_term.html">metabolite_term</a></li>
+<li><a href="./R/docs/molecule_entity.html">molecule_entity</a></li>
 <li><a href="./R/docs/open_registry.html">open_registry</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
