--- a/vignettes/biocad_registry/models/vocabulary_id.html
+++ b/vignettes/biocad_registry/models/vocabulary_id.html
@@ -27,7 +27,8 @@
         <h3>Usage</h3>
 
         <div style="width: 100%; padding-left: 3%; color: black;">
-            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>vocabulary_id</strong>(<i>biocad.registry</i>, <i>term</i>, <i>category</i>);</code></pre>
+            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>vocabulary_id</strong>(<i>biocad.registry</i>, <i>term</i>, <i>category</i>,
+    <i>desc</i> = <span style='color: brown;'><strong>""</strong></span>);</code></pre>
         </div>
 
         <h3>Arguments</h3>
