run package msbuild

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -21,6 +21,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/molecule_entity.html">molecule_entity</a></li>
 <li><a href="./R/docs/open_registry.html">open_registry</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
+<li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
 <li><a href="./R/docs/imports_pubchem.html">imports_pubchem</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
 </ul>
