run package msbuild

--- a/vignettes/clr/biocad_registry/biocad_registryModel/molecule.html
+++ b/vignettes/clr/biocad_registry/biocad_registryModel/molecule.html
@@ -38,6 +38,7 @@ export class molecule extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/
    note: string;
    parent: integer;
    type: integer;
+   xref_id: string;
 }
 </code>
         </pre>
