--- a/vignettes/clr/biocad_registry/biocad_registryModel/pathway.html
+++ b/vignettes/clr/biocad_registry/biocad_registryModel/pathway.html
@@ -34,6 +34,7 @@ export class pathway extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/M
    id: integer;
    name: string;
    note: string;
+   xref_id: string;
 }
 </code>
         </pre>
