run package msbuikld

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -1,4 +1,9 @@
-﻿<pre>Package: biocad_registry
+﻿<head>
+<title>Database system for access the GCModeller cloud repository</title>
+</head>
+<body>
+<h1>Database system for access the GCModeller cloud repository</h1>
+<pre>Package: biocad_registry
 Type: Package
 Title: Database system for access the GCModeller cloud repository
 Version: 1.0.148
@@ -21,6 +26,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/molecule_entity.html">molecule_entity</a></li>
 <li><a href="./R/docs/open_registry.html">open_registry</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
+<li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
 <li><a href="./R/docs/imports_pubchem.html">imports_pubchem</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
@@ -29,3 +35,4 @@ RoxygenNote: 7.1.1
 <ul>
 <li><a href="./biocad_registry/models.html">models</a></li>
 </ul>
+</body>
