--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -29,6 +29,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
 <li><a href="./R/docs/imports_pubchem.html">imports_pubchem</a></li>
+<li><a href="./R/docs/imports_rhea.html">imports_rhea</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
 </ul>
 <h2>Library: biocad_registry.dll</h2>
