run package msbuild

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -24,6 +24,8 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/protein_term.html">protein_term</a></li>
 <li><a href="./R/docs/metabolite_term.html">metabolite_term</a></li>
 <li><a href="./R/docs/molecule_entity.html">molecule_entity</a></li>
+<li><a href="./R/docs/reaction_model.html">reaction_model</a></li>
+<li><a href="./R/docs/enzyme_regulation.html">enzyme_regulation</a></li>
 <li><a href="./R/docs/open_registry.html">open_registry</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
