--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -31,6 +31,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
 <li><a href="./R/docs/imports_pubchem.html">imports_pubchem</a></li>
+<li><a href="./R/docs/__push_compound_metadata.html">__push_compound_metadata</a></li>
 <li><a href="./R/docs/imports_rhea.html">imports_rhea</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
 </ul>
