--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -23,13 +23,16 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/rna_term.html">rna_term</a></li>
 <li><a href="./R/docs/protein_term.html">protein_term</a></li>
 <li><a href="./R/docs/metabolite_term.html">metabolite_term</a></li>
+<li><a href="./R/docs/molecule_terms.html">molecule_terms</a></li>
 <li><a href="./R/docs/molecule_entity.html">molecule_entity</a></li>
 <li><a href="./R/docs/reaction_model.html">reaction_model</a></li>
 <li><a href="./R/docs/enzyme_regulation.html">enzyme_regulation</a></li>
+<li><a href="./R/docs/get_molecule_by_dbxref.html">get_molecule_by_dbxref</a></li>
 <li><a href="./R/docs/open_registry.html">open_registry</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
+<li><a href="./R/docs/imports_metacyc.html">imports_metacyc</a></li>
 <li><a href="./R/docs/imports_pubchem.html">imports_pubchem</a></li>
 <li><a href="./R/docs/__push_compound_metadata.html">__push_compound_metadata</a></li>
 <li><a href="./R/docs/imports_rhea.html">imports_rhea</a></li>
