run package msbuild

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -32,11 +32,12 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
-<li><a href="./R/docs/__push_compound_metadata.html">__push_compound_metadata</a></li>
 <li><a href="./R/docs/imports_metacyc.html">imports_metacyc</a></li>
 <li><a href="./R/docs/imports_pubchem.html">imports_pubchem</a></li>
 <li><a href="./R/docs/imports_rhea.html">imports_rhea</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
+<li><a href="./R/docs/check_metabolite.html">check_metabolite</a></li>
+<li><a href="./R/docs/__push_compound_metadata.html">__push_compound_metadata</a></li>
 </ul>
 <h2>Library: biocad_registry.dll</h2>
 <ul>
