--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -37,6 +37,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/imports_rhea.html">imports_rhea</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
 <li><a href="./R/docs/check_metabolite.html">check_metabolite</a></li>
+<li><a href="./R/docs/find_molecule.html">find_molecule</a></li>
 <li><a href="./R/docs/__push_compound_metadata.html">__push_compound_metadata</a></li>
 </ul>
 <h2>Library: biocad_registry.dll</h2>
