run package msbuild

--- a/vignettes/clr/biocad_registry/biocad_registryModel/reaction_graph.html
+++ b/vignettes/clr/biocad_registry/biocad_registryModel/reaction_graph.html
@@ -31,6 +31,7 @@
 # namespace biocad_registry.biocad_registryModel
 export class reaction_graph extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> {
    add_time: <a href="/vignettes/clr/System/DateTime.html">DateTime</a>;
+   db_xref: string;
    factor: double;
    id: integer;
    molecule_id: integer;
