--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -27,14 +27,18 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/molecule_entity.html">molecule_entity</a></li>
 <li><a href="./R/docs/reaction_model.html">reaction_model</a></li>
 <li><a href="./R/docs/enzyme_regulation.html">enzyme_regulation</a></li>
-<li><a href="./R/docs/get_molecule_by_dbxref.html">get_molecule_by_dbxref</a></li>
 <li><a href="./R/docs/open_registry.html">open_registry</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
+<li><a href="./R/docs/get_molecule_by_dbxref.html">get_molecule_by_dbxref</a></li>
+<li><a href="./R/docs/link_gene_proteins.html">link_gene_proteins</a></li>
+<li><a href="./R/docs/link_reaction_enzymes.html">link_reaction_enzymes</a></li>
+<li><a href="./R/docs/link_reaction_metabolites.html">link_reaction_metabolites</a></li>
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
 <li><a href="./R/docs/imports_metacyc.html">imports_metacyc</a></li>
 <li><a href="./R/docs/imports_pubchem.html">imports_pubchem</a></li>
 <li><a href="./R/docs/imports_rhea.html">imports_rhea</a></li>
+<li><a href="./R/docs/imports_sabiork.html">imports_sabiork</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
 <li><a href="./R/docs/check_metabolite.html">check_metabolite</a></li>
 <li><a href="./R/docs/find_molecule.html">find_molecule</a></li>
