--- a/vignettes/clr/Oracle/LinuxCompatibility/MySQL/Uri/ConnectionUri.html
+++ b/vignettes/clr/Oracle/LinuxCompatibility/MySQL/Uri/ConnectionUri.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>biocad_registry.biocad_registryModel.reaction</title>
+    <title>Oracle.LinuxCompatibility.MySQL.Uri.ConnectionUri</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -13,12 +13,12 @@
 
         <table style="width: 100%;">
             <tr>
-                <td>reaction {biocad_registry.biocad_registryModel}</td>
+                <td>ConnectionUri {Oracle.LinuxCompatibility.MySQL.Uri}</td>
                 <td style="text-align: right;">.NET clr documentation</td>
             </tr>
         </table>
 
-        <h2>reaction</h2>
+        <h2>ConnectionUri</h2>
 
         <h3>Description</h3>
 
@@ -28,24 +28,22 @@
 
         <pre>
             <code id="clr_ts">
-# namespace biocad_registry.biocad_registryModel
-export class reaction extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> {
-   add_time: <a href="/vignettes/clr/System/DateTime.html">DateTime</a>;
-   db_xref: string;
-   equation: string;
-   id: integer;
-   name: string;
-   note: string;
+# namespace Oracle.LinuxCompatibility.MySQL.Uri
+export class ConnectionUri {
+   Database: string;
+   error_log: string;
+   IPAddress: string;
+   Password: string;
+   Port: integer;
+   TimeOut: integer;
+   User: string;
 }
 </code>
         </pre>
 
         <h3>.NET clr type reference tree</h3>
 
-        <ol>
-<li>this class extends from <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> class: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a></li>
-<li>use by <i>property</i> member <code>add_time</code>: <a href="/vignettes/clr/System/DateTime.html">DateTime</a></li>
-</ol>
+        this clr type has no other .net clr type reference.
 
 
         <hr />
