--- a/vignettes/clr/System/Reflection/CustomAttributeTypedArgument.html
+++ b/vignettes/clr/System/Reflection/CustomAttributeTypedArgument.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>biocad_registry.biocad_registryModel.reaction</title>
+    <title>System.Reflection.CustomAttributeTypedArgument</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -13,12 +13,12 @@
 
         <table style="width: 100%;">
             <tr>
-                <td>reaction {biocad_registry.biocad_registryModel}</td>
+                <td>CustomAttributeTypedArgument {System.Reflection}</td>
                 <td style="text-align: right;">.NET clr documentation</td>
             </tr>
         </table>
 
-        <h2>reaction</h2>
+        <h2>CustomAttributeTypedArgument</h2>
 
         <h3>Description</h3>
 
@@ -28,14 +28,10 @@
 
         <pre>
             <code id="clr_ts">
-# namespace biocad_registry.biocad_registryModel
-export class reaction extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> {
-   add_time: <a href="/vignettes/clr/System/DateTime.html">DateTime</a>;
-   db_xref: string;
-   equation: string;
-   id: integer;
-   name: string;
-   note: string;
+# namespace System.Reflection
+export class CustomAttributeTypedArgument extends <a href="/vignettes/clr/System/ValueType.html">ValueType</a> {
+   ArgumentType: <a href="/vignettes/clr/System/Type.html">Type</a>;
+   Value: <i>any</i> kind;
 }
 </code>
         </pre>
@@ -43,8 +39,9 @@ export class reaction extends <a href="/vignettes/clr/Oracle/LinuxCompatibility/
         <h3>.NET clr type reference tree</h3>
 
         <ol>
-<li>this class extends from <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a> class: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html">MySQLTable</a></li>
-<li>use by <i>property</i> member <code>add_time</code>: <a href="/vignettes/clr/System/DateTime.html">DateTime</a></li>
+<li>this class extends from <a href="/vignettes/clr/System/ValueType.html">ValueType</a> class: <a href="/vignettes/clr/System/ValueType.html">ValueType</a></li>
+<li>use by <i>property</i> member <code>ArgumentType</code>: <a href="/vignettes/clr/System/Type.html">Type</a></li>
+<li>use by <i>property</i> member <code>Value</code>: <i>any</i> kind</li>
 </ol>
 
 
