--- a/vignettes/clr/biocad_registry/biocad_registry.html
+++ b/vignettes/clr/biocad_registry/biocad_registry.html
@@ -30,6 +30,12 @@
             <code id="clr_ts">
 # namespace biocad_registry
 export class biocad_registry extends <a href="/vignettes/clr/biocad_registry/biocad_registryModel/db_mysql.html">db_mysql</a> {
+   db_xrefs: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
+   molecule_function: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
+   reaction_graph: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
+   regulation_graph: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
+   subcellular_compartments: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
+   vocabulary: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
 }
 </code>
         </pre>
@@ -38,6 +44,12 @@ export class biocad_registry extends <a href="/vignettes/clr/biocad_registry/bio
 
         <ol>
 <li>this class extends from <a href="/vignettes/clr/biocad_registry/biocad_registryModel/db_mysql.html">db_mysql</a> class: <a href="/vignettes/clr/biocad_registry/biocad_registryModel/db_mysql.html">db_mysql</a></li>
+<li>use by <i>property</i> member <code>db_xrefs</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
+<li>use by <i>property</i> member <code>molecule_function</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
+<li>use by <i>property</i> member <code>reaction_graph</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
+<li>use by <i>property</i> member <code>regulation_graph</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
+<li>use by <i>property</i> member <code>subcellular_compartments</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
+<li>use by <i>property</i> member <code>vocabulary</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
 </ol>
 
 
