--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -157,6 +157,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./models/subcellular_location.html">subcellular_location</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="enzyme_function">
+    <a href="./models/enzyme_function.html">enzyme_function</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
