get enzyme information

--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -163,6 +163,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./models/enzyme_function.html">enzyme_function</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="enzyme">
+    <a href="./models/enzyme.html">enzyme</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
