run package msbuild

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -36,6 +36,8 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
 <li><a href="./R/docs/imports_metacyc.html">imports_metacyc</a></li>
+<li><a href="./R/docs/load_biocyc_reactions.html">load_biocyc_reactions</a></li>
+<li><a href="./R/docs/load_biocyc_compounds.html">load_biocyc_compounds</a></li>
 <li><a href="./R/docs/imports_pubchem.html">imports_pubchem</a></li>
 <li><a href="./R/docs/imports_rhea.html">imports_rhea</a></li>
 <li><a href="./R/docs/imports_sabiork.html">imports_sabiork</a></li>
