run package msbuild

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -45,6 +45,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/check_metabolite.html">check_metabolite</a></li>
 <li><a href="./R/docs/find_molecule.html">find_molecule</a></li>
 <li><a href="./R/docs/__push_compound_metadata.html">__push_compound_metadata</a></li>
+<li><a href="./R/docs/push_reaction.html">push_reaction</a></li>
 </ul>
 <h2>Library: biocad_registry.dll</h2>
 <ul>
