--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -35,6 +35,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/link_reaction_metabolites.html">link_reaction_metabolites</a></li>
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
+<li><a href="./R/docs/save_nucleotide_embedding.html">save_nucleotide_embedding</a></li>
 <li><a href="./R/docs/imports_metacyc.html">imports_metacyc</a></li>
 <li><a href="./R/docs/load_biocyc_genes.html">load_biocyc_genes</a></li>
 <li><a href="./R/docs/load_biocyc_reactions.html">load_biocyc_reactions</a></li>
