hook protein imports

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -37,6 +37,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
 <li><a href="./R/docs/save_nucleotide_embedding.html">save_nucleotide_embedding</a></li>
 <li><a href="./R/docs/imports_metacyc.html">imports_metacyc</a></li>
+<li><a href="./R/docs/load_biocyc_proteins.html">load_biocyc_proteins</a></li>
 <li><a href="./R/docs/load_biocyc_genes.html">load_biocyc_genes</a></li>
 <li><a href="./R/docs/load_biocyc_reactions.html">load_biocyc_reactions</a></li>
 <li><a href="./R/docs/load_biocyc_compounds.html">load_biocyc_compounds</a></li>
