run package msbuild

--- a/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html
+++ b/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySQLTable.html
@@ -22,7 +22,7 @@
 
         <h3>Description</h3>
 
-        
+        <p>Type Fundamentals of this mysql ORM solution.(这个数据表对象是MYSQL ORM解决方案的类型基础)</p>
 
         <h3>Declare</h3>        
 
