--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -1,15 +1,17 @@
 ﻿<head>
-<title>Database system for access the GCModeller cloud repository</title>
+<title>Build GCModeller cloud repository database</title>
 </head>
 <body>
-<h1>Database system for access the GCModeller cloud repository</h1>
+<h1>Build GCModeller cloud repository database</h1>
 <pre>Package: biocad_registry
 Type: Package
-Title: Database system for access the GCModeller cloud repository
+Title: Build GCModeller cloud repository database
 Version: 1.0.148
 Author: xieguigang &lt;xie.guigang@gcmodeller.org>
 Maintainer: xieguigang &lt;xie.guigang@gcmodeller.org>
-Description: Database system for access the GCModeller cloud repository
+Description: A package for build database system of the GCModeller cloud repository.
+Provides imports script for handling multiple public database content as upstream 
+input for the biocad system. 
 License: MIT License
 Encoding: UTF-8
 LazyData: true
@@ -36,6 +38,9 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
 <li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
 <li><a href="./R/docs/save_nucleotide_embedding.html">save_nucleotide_embedding</a></li>
+<li><a href="./R/docs/imports_kegg.html">imports_kegg</a></li>
+<li><a href="./R/docs/imports_kegg_reaction.html">imports_kegg_reaction</a></li>
+<li><a href="./R/docs/cast_kegg_reaction.html">cast_kegg_reaction</a></li>
 <li><a href="./R/docs/imports_metacyc.html">imports_metacyc</a></li>
 <li><a href="./R/docs/load_biocyc_proteins.html">load_biocyc_proteins</a></li>
 <li><a href="./R/docs/load_biocyc_genes.html">load_biocyc_genes</a></li>
