--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -47,6 +47,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/load_biocyc_reactions.html">load_biocyc_reactions</a></li>
 <li><a href="./R/docs/load_biocyc_compounds.html">load_biocyc_compounds</a></li>
 <li><a href="./R/docs/imports_pubchem.html">imports_pubchem</a></li>
+<li><a href="./R/docs/imports_odor.html">imports_odor</a></li>
 <li><a href="./R/docs/imports_rhea.html">imports_rhea</a></li>
 <li><a href="./R/docs/imports_sabiork.html">imports_sabiork</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
