run package msbuikld

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -31,6 +31,8 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/enzyme_regulation.html">enzyme_regulation</a></li>
 <li><a href="./R/docs/open_registry.html">open_registry</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
+<li><a href="./R/docs/export_enzymatic.html">export_enzymatic</a></li>
+<li><a href="./R/docs/export_reactionLinks.html">export_reactionLinks</a></li>
 <li><a href="./R/docs/get_molecule_by_dbxref.html">get_molecule_by_dbxref</a></li>
 <li><a href="./R/docs/link_gene_proteins.html">link_gene_proteins</a></li>
 <li><a href="./R/docs/link_reaction_enzymes.html">link_reaction_enzymes</a></li>
@@ -50,6 +52,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/imports_odor.html">imports_odor</a></li>
 <li><a href="./R/docs/imports_rhea.html">imports_rhea</a></li>
 <li><a href="./R/docs/imports_sabiork.html">imports_sabiork</a></li>
+<li><a href="./R/docs/__find_substrate_id.html">__find_substrate_id</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
 <li><a href="./R/docs/check_metabolite.html">check_metabolite</a></li>
 <li><a href="./R/docs/find_molecule.html">find_molecule</a></li>
