--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -38,8 +38,6 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/link_reaction_enzymes.html">link_reaction_enzymes</a></li>
 <li><a href="./R/docs/link_reaction_metabolites.html">link_reaction_metabolites</a></li>
 <li><a href="./R/docs/imports_chebi.html">imports_chebi</a></li>
-<li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
-<li><a href="./R/docs/save_nucleotide_embedding.html">save_nucleotide_embedding</a></li>
 <li><a href="./R/docs/imports_kegg.html">imports_kegg</a></li>
 <li><a href="./R/docs/imports_kegg_reaction.html">imports_kegg_reaction</a></li>
 <li><a href="./R/docs/cast_kegg_reaction.html">cast_kegg_reaction</a></li>
@@ -54,6 +52,9 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/imports_sabiork.html">imports_sabiork</a></li>
 <li><a href="./R/docs/__find_substrate_id.html">__find_substrate_id</a></li>
 <li><a href="./R/docs/imports_uniprot.html">imports_uniprot</a></li>
+<li><a href="./R/docs/imports_genebank.html">imports_genebank</a></li>
+<li><a href="./R/docs/save_nucleotide_embedding.html">save_nucleotide_embedding</a></li>
+<li><a href="./R/docs/imports_genomic_refseq.html">imports_genomic_refseq</a></li>
 <li><a href="./R/docs/check_metabolite.html">check_metabolite</a></li>
 <li><a href="./R/docs/find_molecule.html">find_molecule</a></li>
 <li><a href="./R/docs/__push_compound_metadata.html">__push_compound_metadata</a></li>
