--- a/vignettes/clr/Microsoft/VisualBasic/ComponentModel/DataSourceModel/SchemaMaps/SQLTable.html
+++ b/vignettes/clr/Microsoft/VisualBasic/ComponentModel/DataSourceModel/SchemaMaps/SQLTable.html
@@ -22,8 +22,9 @@
 
         <h3>Description</h3>
 
-        <p>A generic abstract model of a SQL table.
- (SQL之中的一个数据表的抽象描述接口)</p>
+        <p>A generic abstract model of a SQL table.</p>
+
+<p>(SQL之中的一个数据表的抽象描述接口)</p>
 
         <h3>Declare</h3>        
 
