--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -63,6 +63,7 @@ RoxygenNote: 7.1.1
 </ul>
 <h2>Library: biocad_registry.dll</h2>
 <ul>
+<li><a href="./biocad_registry/data_imports.html">data_imports</a></li>
 <li><a href="./biocad_registry/models.html">models</a></li>
 </ul>
 </body>
