--- a/vignettes/biocad_registry/data_imports.html
+++ b/vignettes/biocad_registry/data_imports.html
@@ -88,6 +88,18 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="genbank_repo">
+    <a href="./data_imports/genbank_repo.html">genbank_repo</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
+  <td id="imports_genomics">
+    <a href="./data_imports/imports_genomics.html">imports_genomics</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_taxonomy">
     <a href="./data_imports/imports_taxonomy.html">imports_taxonomy</a>
   </td>
