--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -61,4 +61,9 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/push_reaction.html">push_reaction</a></li>
 <li><a href="./R/docs/get_genbank.html">get_genbank</a></li>
 </ul>
+<h2>Library: biocad_registry.dll</h2>
+<ul>
+<li><a href="./biocad_registry/data_imports.html">data_imports</a></li>
+<li><a href="./biocad_registry/models.html">models</a></li>
+</ul>
 </body>
