--- a/vignettes/biocad_registry/data_imports.html
+++ b/vignettes/biocad_registry/data_imports.html
@@ -100,6 +100,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="imports_genes">
+    <a href="./data_imports/imports_genes.html">imports_genes</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_taxonomy">
     <a href="./data_imports/imports_taxonomy.html">imports_taxonomy</a>
   </td>
