--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -98,6 +98,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./registry/find_taxinfo.html">find_taxinfo</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="taxonomy_lineage">
+    <a href="./registry/taxonomy_lineage.html">taxonomy_lineage</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
