get genomics nucleotide sequence

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -32,6 +32,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/open_registry.html">open_registry</a></li>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
 <li><a href="./R/docs/export_enzymatic.html">export_enzymatic</a></li>
+<li><a href="./R/docs/export_genomics_fasta.html">export_genomics_fasta</a></li>
 <li><a href="./R/docs/export_reactionLinks.html">export_reactionLinks</a></li>
 <li><a href="./R/docs/get_molecule_by_dbxref.html">get_molecule_by_dbxref</a></li>
 <li><a href="./R/docs/link_gene_proteins.html">link_gene_proteins</a></li>
