--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -104,6 +104,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./registry/taxonomy_lineage.html">taxonomy_lineage</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="child_list">
+    <a href="./registry/child_list.html">child_list</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
