--- a/vignettes/biocad_registry/data_imports.html
+++ b/vignettes/biocad_registry/data_imports.html
@@ -106,6 +106,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="imports_genbank_proteins">
+    <a href="./data_imports/imports_genbank_proteins.html">imports_genbank_proteins</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_dbxrefs">
     <a href="./data_imports/imports_dbxrefs.html">imports_dbxrefs</a>
   </td>
