--- a/vignettes/biocad_registry/data_imports/imports_metab_repo.html
+++ b/vignettes/biocad_registry/data_imports/imports_metab_repo.html
@@ -27,7 +27,8 @@
         <h3>Usage</h3>
 
         <div style="width: 100%; padding-left: 3%; color: black;">
-            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>imports_metab_repo</strong>(<i>registry</i>, <i>metab</i>);</code></pre>
+            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>imports_metab_repo</strong>(<i>registry</i>, <i>metab</i>,
+    <i>lazy.molecule.ctor</i> = <span style='color: blue !important;'>TRUE</span>);</code></pre>
         </div>
 
         <h3>Arguments</h3>
