--- a/vignettes/clr/biocad_storage/BioCadVocabulary.html
+++ b/vignettes/clr/biocad_storage/BioCadVocabulary.html
@@ -37,6 +37,7 @@ export class BioCadVocabulary {
    gene_term: integer;
    kegg_term: integer;
    metabolite_term: integer;
+   molecule_entity: integer;
    protein_motif_term: integer;
    protein_term: integer;
    pubchem_term: integer;
