--- a/vignettes/clr/biocad_storage/biocad_registry.html
+++ b/vignettes/clr/biocad_storage/biocad_registry.html
@@ -44,6 +44,7 @@ export class biocad_registry extends <a href="/vignettes/clr/biocad_storage/bioc
    regulation_graph: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
    sequence_graph: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
    subcellular_compartments: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
+   subcellular_location: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
    synonym: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
    taxonomy_tree: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
    vocabulary: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
@@ -70,6 +71,7 @@ export class biocad_registry extends <a href="/vignettes/clr/biocad_storage/bioc
 <li>use by <i>property</i> member <code>regulation_graph</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
 <li>use by <i>property</i> member <code>sequence_graph</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
 <li>use by <i>property</i> member <code>subcellular_compartments</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
+<li>use by <i>property</i> member <code>subcellular_location</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
 <li>use by <i>property</i> member <code>synonym</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
 <li>use by <i>property</i> member <code>taxonomy_tree</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
 <li>use by <i>property</i> member <code>vocabulary</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
